Fix Packagist logo url and command

--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
             "providers": [
                 "dogukantokgoz\\Route2Postman\\PostmanServiceProvider"
             ],
-            "logo": "https://imgur.com/a/route2postman-1EmSwbm"
+            "logo": "https://i.imgur.com/hewTR1I.png"
         }
     },
     "license": "MIT"
